perf: improve error responses
