# app/internal/presentation/dtos/error_dto.go
@@ -1,0 +1,6 @@
+package dtos
+
+type ErrorDto struct {
+	Message string `json:"message"`
+	Error   string `json:"error"`
+}
